feat: 网络适配接口

--- a/src/.env.example
+++ b/src/.env.example
@@ -50,3 +50,14 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+# BPM服务相关配置
+# 支持http和mock两种网络适配器 mock为模拟接口数据用
+BPM_NETWORK_INTERFACE=mock
+BPM_APP_KEY=
+BPM_APP_SECRET=
+BPM_ENGINE_URL=
+BPM_NOTIFY_URL=
+# 钉钉告警机器人，自行创建获取access_token。需要定义关键字【bpm、工作流】等
+BPM_DING_ALARM_URL=https://oapi.dingtalk.com/robot/send?access_token=
